[package]
name = "yersinia-capture"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Packet capture wrapper for Yersinia-RS"

[dependencies]
yersinia-core = { path = "../yersinia-core" }
pcap = { workspace = true }
pnet = { workspace = true }
pnet_datalink = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }
parking_lot = { workspace = true }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "list_interfaces"
required-features = []

[[example]]
name = "basic_capture"
required-features = []

[[example]]
name = "filtered_capture"
required-features = []
