[package]
name = "yersinia-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits, types, and error handling for Yersinia-RS"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.10", features = ["v7"] }
tokio = { workspace = true }
pnet_datalink = { workspace = true }
ipnetwork = "0.20"

[dev-dependencies]
mockall = { workspace = true }
